--- a/package.json
+++ b/package.json
@@ -26,8 +26,21 @@
     "@ionic-native/status-bar": "4.8.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "body-parser": "^1.18.3",
+    "cordova-android": "7.0.0",
+    "cordova-ios": "4.5.4",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "ng2-charts": "^1.6.0",
+    "pusher": "^2.0.1",
+    "pusher-js": "^4.2.2",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -36,5 +49,18 @@
     "@ionic/app-scripts": "3.1.10",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "ios",
+      "android"
+    ]
+  }
 }
