--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PUSHER_APP_ID=557172
-PUSHER_KEY=c9a2c26916292f22323a
-PUSHER_SECRET=8ded4f07c8b15d436eac
-PUSHER_CLUSTER=ap1
+PUSHER_APP_ID=app-id
+PUSHER_APP_KEY=app-key
+PUSHER_APP_SECRET=app-secret
+PUSHER_CLUSTER=cluster
